# acg_master

./: .gitignore  Cargo.toml  README.md  README.zh.md  docker-compose.yml  dockerfile  index.html  nginx.conf
server/: Cargo.toml
server/src/: handler.rs  main.rs
server/src/handler/: bangumi.rs  config.rs  mod.rs  ws.rs  ws2.rs
src/: app.module.scss  bangumi.rs  config.rs  lib.rs  main.rs
src/components/: back_btn.rs  card.rs  footer.rs  header.rs  mod.rs  theme_btn.rs
src/components/styles/: back_btn.module.scss  card.module.scss  footer.module.scss  header.module.scss  jmp_btn.module.scss  lang_list.module.scss  theme_btn.module.scss
src/pages/: home.rs  single.rs
src/pages/styles/: home.module.scss  not_found.module.scss  single.module.scss
web/: cargo.toml  index.html
web/src/: app.module.scss  bangumi.rs  config.rs  items.rs  lib.rs  main.rs  ws.rs
web/src/bangumi/: anime.rs  character.rs  mod.rs
web/src/components/: card.rs  card2.rs  footer.rs  header.rs  hide_card.rs  hide_card2.rs  jmp_btn.rs  lang_list.rs  mod.rs  popup.rs  theme_btn.rs
web/src/components/styles/: card.module.scss  card2.module.scss  footer.module.scss  header.module.scss  hide_card.module.scss  hide_card2.module.scss  popup.module.scss  theme_btn.module.scss
web/src/pages/: home.rs  mod.rs  multi.rs  not_found.rs  single.rs
web/src/pages/styles/: home.module.scss  multi.module.scss  single.module.scss
