[package]
name = "anime_master"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.19", features = ["csr"] }
leptos_meta = "0.8.6"
leptos_router = "0.8.13"
stylance = "0.8.0"
web-sys = { version = "0.3.95", features = ["Navigator"]}
reqwest = { version = "0.13", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
rand = "0.10.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
gloo-timers = { version = "0.4", features = ["futures"] }


[package.metadata.stylance]
output_file = "./style/bundled.css"
folders = ["./src/"]
extensions = [".module.scss", ".module.css"]
workspace = false
