[workspace]
resolver = "3"
members = [
    "web", 
    "server"
]

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.19", features = ["csr"] }
leptos_meta = "0.8.6"
leptos_router = "0.8.13"
stylance = "0.8.0"
web-sys = { version = "0.3.95", features = ["Navigator"]}
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
rand = "0.10.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
gloo-timers = { version = "0.4", features = ["futures"] }
dotenvy = "0.15"
actix-web = "4.11.0"
actix-cors = "0.7"


