[package]
name = "acg_master_server"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
actix-session.workspace = true
serde.workspace = true
serde_json.workspace = true 
reqwest.workspace = true
rand.workspace = true
hex.workspace = true
time.workspace = true
